--- a/src/Concept_figures.Rmd
+++ b/src/Concept_figures.Rmd
@@ -25,7 +25,6 @@ library(gridExtra)
 library(knitr)
 library(grid)
 library(latticeExtra)
-library(hydroGOF)
 library(plotrix)
 library(scatterplot3d)
 library(ggplot2)
@@ -84,7 +83,7 @@ weights <- t(varImp(model,scale=F)$importance)
 
 ```{r newdat,include = FALSE}
 newdat_orig <- data.frame("A"=seq(min(values(predictors[[var1]]),na.rm=T),max(values(predictors[[var1]]),na.rm=T),length.out=100),
-                    "B"=seq(min(values(predictors[[var2]]),na.rm=T),max(values(predictors[[var2]]),na.rm=T),length.out=100))
+                          "B"=seq(min(values(predictors[[var2]]),na.rm=T),max(values(predictors[[var2]]),na.rm=T),length.out=100))
 
 
 
@@ -109,13 +108,12 @@ scaleparam <- attributes(trainDat_scaled)
 newdat_scaled <- scale(newdat_orig,center=scaleparam$`scaled:center`,                   scale=scaleparam$`scaled:scale`)
 
 trainDat_weights <- data.frame(trainDat_scaled[,"A"]*weights[,"A"],
-trainDat_scaled[,"B"]*weights[,"B"])
+                               trainDat_scaled[,"B"]*weights[,"B"])
 names(trainDat_weights) <- c("A","B")
 newdat <- newdat_scaled
 newdat[,"A"] <- newdat_scaled[,"A"]*weights[,"A"]
 newdat[,"B"] <- newdat_scaled[,"B"]*weights[,"B"]
 
-#newpoint <- 5010
 newpoint <- 4010
 ```
 
@@ -126,11 +124,10 @@ newpoint <- 4010
 pdf("../figures/concept_figures/weightedData.pdf",width=11,height=5.5)
 
 par(fig=c(0,0.49,0,1), new=TRUE,mar=c(4,4,4,4))
-#par(fig=c(0,1,0,1), new=TRUE,mar=c(4,4,4,4))
 plot(trainDat[,"A"],trainDat[,"B"],pch=16,
      xlim=c(min(newdat_orig[,"A"]),max(newdat_orig[,"A"])),
      ylim=c(min(newdat_orig[,"B"]),max(newdat_orig[,"B"])),
-      xlab="Predictor A",ylab="Predictor B")
+     xlab="Predictor A",ylab="Predictor B")
 legend("topleft",pch=c(16,4),col=c("black"),legend=
          c("Training samples"),bty="n")
 
@@ -142,7 +139,6 @@ plot(trainDat_scaled[,"A"],
 Axis(side = 3, x = trainDat_scaled[,"A"])
 Axis(side = 4, x = trainDat_scaled[,"B"],las=1)
 mtext("Predictor A (scaled)", side = 3,line=3)
-#mtext("Predictor B (scaled)", side = 4,line=3)
 
 corners = par("usr")
 par(xpd = TRUE) #Draw outside plot area
@@ -152,7 +148,7 @@ text(x = corners[2]+1, y = mean(corners[3:4]), "Predictor B (scaled)", srt = 270
 par(fig=c(0.51,1,0,1),new=TRUE,mar=c(4,4,4,4))
 plot(trainDat_weights[,"A"],
      trainDat_weights[,"B"],
-      xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
+     xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
      ylim=c(min(newdat[,"B"]),max(newdat[,"B"])),
      xlab="Predictor A (scaled and weighted)",ylab="Predictor B (scaled and weighted)",pch=16,asp=1)
 
@@ -161,8 +157,6 @@ par(mgp=c(1,0.4,0))
 par(fig=c(0.54,0.79,0.6,0.97), new=TRUE)
 barplot(unlist(t(data.frame(varImp(model,scale=F)$importance))),horiz=T,xlab="",cex.axis=0.75,cex.names=0.75)
 title(xlab="Importance", line=1.2,cex.lab=0.75,adj=0)
-
-
 dev.off()
 ```
 
@@ -178,7 +172,7 @@ include_graphics("../figures/concept_figures/weightedData.pdf")
 ```{r prep,include=FALSE}
 ### DI of training data
 cols_fold <- c("blue","green","orange")
-firstpoint <- 119
+firstpoint <- 23
 
 trainDat_weights$fold <- substr(model$pred$Resample,5,5)[order(model$pred$rowIndex)]
 tmp <- NA
@@ -195,23 +189,21 @@ for (i in 1:nrow(trainDat_weights[,1:2])){
 }
 
 ### estimate mean distance between all points:
-  trainDist_mean <- c()
-  trainDist_min <- c()
-  for (i in 1:nrow(trainDat_weights)){
-    trainDist <- FNN::knnx.dist(trainDat_weights[i,c("A","B")],trainDat_weights[,c("A","B")],k=1)
-    trainDist[i] <- NA
-
-    if (!is.null(folds)){
-      trainDist[trainDat_weights$fold==trainDat_weights$fold[i]] <- NA
-    }
-
-    trainDist_mean <- c(trainDist_mean,mean(trainDist,na.rm=T))
-    trainDist_min <- c(trainDist_min,min(trainDist,na.rm=T))
+trainDist_mean <- c()
+trainDist_min <- c()
+for (i in 1:nrow(trainDat_weights)){
+  trainDist <- FNN::knnx.dist(trainDat_weights[i,c("A","B")],trainDat_weights[,c("A","B")],k=1)
+  trainDist[i] <- NA
+  if (!is.null(folds)){
+    trainDist[trainDat_weights$fold==trainDat_weights$fold[i]] <- NA
   }
-  
-  
-  ### calculate the DI of a new data point
-  tmp <- NA
+  trainDist_mean <- c(trainDist_mean,mean(trainDist,na.rm=T))
+  trainDist_min <- c(trainDist_min,min(trainDist,na.rm=T))
+}
+
+
+### calculate the DI of a new data point
+tmp <- NA
 for (i in 1:nrow(trainDat_weights[,1:2])){
   mindist_new <- dist(rbind(newdat[newpoint,1:2],trainDat_weights[i,1:2]))
   mindist_new <- pmin(mindist_new,tmp,na.rm=T)
@@ -220,9 +212,6 @@ for (i in 1:nrow(trainDat_weights[,1:2])){
   }
   tmp <- mindist_new
 }
-
-
-
 ```
 
 
@@ -234,10 +223,9 @@ pdf("../figures/concept_figures/DI_training.pdf",width=15,height=5.7)
 par(fig=c(0,0.355,0,1), new=TRUE,mar=c(4,4,1,1))
 plot(trainDat_weights[,"A"],
      trainDat_weights[,"B"],
-     #col=cols_fold[as.numeric(trainDat_weights$fold)],
      col="black",
      pch=16,xlab="Predictor A (scaled and weighted)",ylab="Predictor B (scaled and weighted)",
-      xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
+     xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
      ylim=c(min(newdat[,"B"]),max(newdat[,"B"])),asp=1)
 
 points(trainDat_weights[firstpoint,"A"],trainDat_weights[firstpoint,"B"],pch=1,col="red")
@@ -245,27 +233,24 @@ mtext("a", 2, adj=2, las=1,padj=-19)
 
 
 for (i in 1:nrow(trainDat_weights)){
-#  if(trainDat_weights$fold[i]==trainDat_weights$fold[firstpoint]){
-#    next
-#  }
-lines(c(trainDat_weights[firstpoint,"A"],trainDat_weights[i,"A"]),
+  
+  lines(c(trainDat_weights[firstpoint,"A"],trainDat_weights[i,"A"]),
         c(trainDat_weights[firstpoint,"B"],trainDat_weights[i,"B"]),
-      col="grey")
+        col="grey")
 }
 points(trainDat_weights[,"A"],
-     trainDat_weights[,"B"],
-     #col=cols_fold[as.numeric(trainDat_weights$fold)],
-     col="black",
-     pch=16)
+       trainDat_weights[,"B"],
+       #col=cols_fold[as.numeric(trainDat_weights$fold)],
+       col="black",
+       pch=16)
 
 points(trainDat_weights[firstpoint,"A"],trainDat_weights[firstpoint,"B"],pch=1,col="red")
 
-#legend("topleft",pch=c(rep(16,3),1),col=c(cols_fold,"red"),legend=c("Fold 1","Fold 2","Fold 3","Example"),bty="n")
 
 legend("topleft",pch=c(16,1),col=c("black","red"),legend=c("Training samples","Example"),bty="n")
 
 legend("topright",legend=paste0("Mean distance for example =", round(
-                                trainDist_mean[firstpoint],2),"\nAverage mean distance between\nall training data =",round(attributes(newdat_aoa)$aoa_stats$Mean_train,2)),bty="n",cex=0.7)
+  trainDist_mean[firstpoint],2),"\nAverage mean distance between\nall training data =",round(attributes(newdat_aoa)$aoa_stats$Mean_train,2)),bty="n",cex=0.7)
 
 
 
@@ -273,13 +258,13 @@ legend("topright",legend=paste0("Mean distance for example =", round(
 par(fig=c(0.355,0.68,0,1),new=TRUE,mar=c(4,1,1,1))
 plot(trainDat_weights[,"A"],
      trainDat_weights[,"B"],col=cols_fold[as.numeric(trainDat_weights$fold)],pch=16,xlab="Predictor A (scaled and weighted)",ylab="",
-      xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
+     xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
      ylim=c(min(newdat[,"B"]),max(newdat[,"B"])),asp=1,yaxt="n")
 mtext("b", 2, adj=2, las=1,padj=-19)
 points(trainDat_weights[firstpoint,"A"],trainDat_weights[firstpoint,"B"],pch=1,col="red")
 
 lines(c(trainDat_weights[firstpoint,"A"],trainDat_weights[whichIsMin_tr,"A"]),
-        c(trainDat_weights[firstpoint,"B"],trainDat_weights[whichIsMin_tr,"B"]))
+      c(trainDat_weights[firstpoint,"B"],trainDat_weights[whichIsMin_tr,"B"]))
 text(trainDat_weights[whichIsMin_tr,"A"],trainDat_weights[whichIsMin_tr,"B"],paste0("dist=",round(mindist,2),", \nDI= ",round(mindist/attributes(newdat_aoa)$aoa_stats$Mean_train,2)),pos=2,cex=0.85)
 
 legend("topleft",pch=c(rep(16,3),1),col=c(cols_fold,"red"),legend=c("Fold 1","Fold 2","Fold 3","Example"),bty="n")
@@ -291,41 +276,40 @@ par(fig=c(0.57,0.68,0.44,1), new=TRUE)
 
 par(mgp=c(1,0.49,0))
 
- boxplot(attributes(newdat_aoa)$TrainDI,cex.axis=0.6,cex.lab=0.5,ylab="",yaxt="n")
- axis(side = 2, at = c(0,0.2,0.4,0.6),cex.axis=0.7)
-    abline(boxplot.stats(attributes(newdat_aoa)$TrainDI)$stats[5],0,col=alpha("blue",0.5),lwd=2)
-    title(ylab="DI of training data", line=1.5,cex.lab=0.6)
-    text(0.7,boxplot.stats(attributes(newdat_aoa)$TrainDI)$stats[5],
-         "AOA\nthreshold",pos=3,col=alpha("blue",0.5),cex=0.7)
-    
+boxplot(attributes(newdat_aoa)$TrainDI,cex.axis=0.6,cex.lab=0.5,ylab="",yaxt="n")
+axis(side = 2, at = c(0,0.2,0.4,0.6),cex.axis=0.7)
+abline(boxplot.stats(attributes(newdat_aoa)$TrainDI)$stats[5],0,col=alpha("blue",0.5),lwd=2)
+title(ylab="DI of training data", line=1.5,cex.lab=0.6)
+text(0.7,boxplot.stats(attributes(newdat_aoa)$TrainDI)$stats[5],
+     "AOA\nthreshold",pos=3,col=alpha("blue",0.5),cex=0.7)
 
-    
-    
+
+
+
 par(fig=c(0.68,1,0,1),new=TRUE,mar=c(4,1,1,1),mgp=c(3, 1, 0))    
-    
-    
-    plot(trainDat_weights[,"A"],
+
+
+plot(trainDat_weights[,"A"],
      trainDat_weights[,"B"],pch=16,xlab="Predictor A (scaled and weighted)",ylab="",
-      xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
+     xlim=c(min(newdat[,"A"]),max(newdat[,"A"])),
      ylim=c(min(newdat[,"B"]),max(newdat[,"B"])),asp=1,yaxt="n")
 mtext("c", 2, adj=2, las=1,padj=-19)
 
 lines(c(newdat[newpoint,"A"],trainDat_weights[whichIsMin,"A"]),
-        c(newdat[newpoint,"B"],trainDat_weights[whichIsMin,"B"]))
+      c(newdat[newpoint,"B"],trainDat_weights[whichIsMin,"B"]))
 points(newdat[newpoint,"A"],newdat[newpoint,"B"],pch=4,col="red")
 text(newdat[newpoint,"A"],newdat[newpoint,"B"],
      paste0("dist=",round(mindist_new,2),", \nDI=",round(mindist_new/attributes(newdat_aoa)$aoa_stats$Mean_train,2)),pos=2,cex=0.85)
 
 
 legend("topleft",pch=c(16,4),col=c("black","red"),legend=c("Training samples","A new data point"),bty="n")
-#legend("topright",legend=paste0("Average mean distance between\nall training data = ", round(attributes(newdat_aoa)$aoa_stats$Mean_train,2)),bty="n",cex=0.5)    
-    
-    
-    
- dev.off()
+
+
+
+dev.off()
 ```
- 
- 
+
+
 ```{r figs3, echo=FALSE,out.width="100%",fig.cap="To answer the question if the trained model can be applied to a new data point, a threshold is used. This is the outlier-removed maximum DI of the cross-validated training data. The calculation of the DI of the training data is shown here for one example: The example data point is in fold 3 of the model. Therefore the distance to the nearest training data point NOT located in fold 3 is calculated (b) and this distance divided by the average of the mean distances between all training data (a). The DI is calculated for each training data point (boxplot) and the threshold is then derived from these DI values, so that a data point is outside the AOA if it is more dissimilar than the dissimilarity observed within the training data."}
 include_graphics("../figures/concept_figures/DI_training.pdf")
 ```
@@ -338,42 +322,37 @@ include_graphics("../figures/concept_figures/DI_training.pdf")
 
 
 
- 
+
 # Estimate the AOA for each new potential data point
 
 ```{r Fig_DI_and_AOA,include = FALSE}
 
- pdf("../figures/concept_figures/AOA.pdf",width=10,height=5.5)
- par(mfrow=c(1,2))
+pdf("../figures/concept_figures/AOA.pdf",width=10,height=5.5)
+par(mfrow=c(1,2))
 alldat$order = findInterval(alldat$aoa.DI, sort(alldat$aoa.DI))
 
 plot(alldat$A,alldat$B,pch=15,col=viridis(nrow(alldat))[alldat$order],
      xlab="Predictor A",ylab="Predictor B",
-    xlim=c(min(newdat_orig[,"A"]),max(newdat_orig[,"A"])),
+     xlim=c(min(newdat_orig[,"A"]),max(newdat_orig[,"A"])),
      ylim=c(min(newdat_orig[,"B"]),max(newdat_orig[,"B"])))
 text(285,600,"DI",cex = 0.75)
 color.legend(275,400,300,570,round(c(min(alldat$aoa.DI),alldat$aoa.DI[alldat$order==nrow(alldat)*0.5],alldat$aoa.DI[alldat$order==nrow(alldat)*0.75],max(alldat$aoa.DI)),1),
-viridis(nrow(alldat))[c(1,nrow(alldat)*0.5,nrow(alldat)*0.75,nrow(alldat))],gradient="y",cex = 0.75)
+             viridis(nrow(alldat))[c(1,nrow(alldat)*0.5,nrow(alldat)*0.75,nrow(alldat))],gradient="y",cex = 0.75)
 
 
 points(trainDat[,"A"],trainDat[,"B"],pch=16)
-#points(newdat_orig[newpoint,"A"],newdat_orig[newpoint,"B"],pch=4,col="red")
-#legend("topleft",pch=c(16,4),col=c("black","red"),legend=c("Training samples","A new data point"),bty="n")
 legend("topleft",pch=c(16),col=c("black"),legend=c("Training samples"),bty="n")
 
-#alldat$order = findInterval(alldat$pred, sort(alldat$pred))
 plot(alldat$A,alldat$B,pch=15,col=viridis(nrow(alldat))[alldat$order],
      xlab="Predictor A",ylab="Predictor B",
-         xlim=c(min(newdat_orig[,"A"]),max(newdat_orig[,"A"])),
+     xlim=c(min(newdat_orig[,"A"]),max(newdat_orig[,"A"])),
      ylim=c(min(newdat_orig[,"B"]),max(newdat_orig[,"B"])))
 points(alldat$A,alldat$B,pch=16,col=c("white","transparent")[alldat$aoa.AOA+1],cex=1.1)
 text(285,600,"DI",cex = 0.75)
 color.legend(275,400,300,570,round(c(min(alldat$aoa.DI),alldat$aoa.DI[alldat$order==nrow(alldat)*0.5],alldat$aoa.DI[alldat$order==nrow(alldat)*0.75],max(alldat$aoa.DI)),1),
-viridis(nrow(alldat))[c(1,nrow(alldat)*0.5,nrow(alldat)*0.75,nrow(alldat))],gradient="y",cex = 0.75)
+             viridis(nrow(alldat))[c(1,nrow(alldat)*0.5,nrow(alldat)*0.75,nrow(alldat))],gradient="y",cex = 0.75)
 
 points(trainDat[,"A"],trainDat[,"B"],pch=16)
-#points(newdat_orig[newpoint,"A"],newdat_orig[newpoint,"B"],pch=4,col="red")
-#legend("topleft",pch=c(16,4),col=c("black","red"),legend=c("Training samples","A new data point"),bty="n")
 legend("topleft",pch=c(16),col=c("black"),legend=c("Training samples"),bty="n")
 
 dev.off()
@@ -384,45 +363,17 @@ dev.off()
 include_graphics("../figures/concept_figures/AOA.pdf")
 ```
 
- 
 
 
-```{r Fig_DI_and_AOA_sp,include = FALSE}
-#### do the same spatial
 
-#predictors <- predictors[[c(var1,var2)]]
-#names(predictors) <- c("A","B")
-#AOA_sp <- aoa(predictors,model)
-#spplot(AOA_sp$DI)
-#spplot(AOA_sp$AOA)
-```
 
 # Additional figures
-## Threshold thoughts
-
-```{r Fig_thresholds,include = FALSE}
-
-pdf("../figures/concept_figures/threshold_thoughts.pdf")
- boxplot(attributes(newdat_aoa)$TrainDI,ylab="DI of train data")
- abline(attributes(newdat_aoa)$aoa_stats$threshold_stats[5],0,col="red")
- abline(attributes(newdat_aoa)$aoa_stats$threshold_stats[6],0,col="red",lty=2)
-  abline(attributes(newdat_aoa)$aoa_stats$threshold_stats[7],0,col="red",lty=3)
- 
- 
-  abline(attributes(newdat_aoa)$aoa_stats$threshold,0,col="blue")
-  legend("bottomright",lty=c(1,2,3,1),col=c("red","red","red","blue"),legend=c("0.95 quantile","0.99 quantile","1.00 quantile","1.5*IQR"),bty="n")
- dev.off()
-
-```
-
-```{r figs_thresholdthoughts, echo=FALSE,out.width="100%",fig.cap=""}
-include_graphics("../figures/concept_figures/threshold_thoughts.pdf")
-```
 
 ## Full range of training data covered
 
-```{r Fig_rangecovered,include = FALSE}
+When the full range of environmental conditions is covered the result is that the model can be applied to the entire study area. However, covering the full range of each variable is not enough (figure left) but the combined ranges need to be covered if the model should be applicable to the entire study area (figure right).
 
+```{r Fig_rangecovered,include = FALSE}
 
 pdf("../figures/concept_figures/fullgradientcovered.pdf",width=9,height=5)
 par(mfrow=c(1,2))
@@ -430,7 +381,6 @@ par(mfrow=c(1,2))
 grid <- expand.grid("x"=seq(0,11,0.1),"y"=seq(0,11,0.1))
 smpl <- data.frame("x"=c(1:10,rep(1,9)),"y"=c(rep(1,9),1:10))
 AOA <- aoa(grid,train = smpl)
-
 
 plot(grid,col=AOA$AOA,pch=15,yaxs="i",xaxs="i",
      xlab="Predictor A",ylab="Predictor B")
@@ -455,7 +405,9 @@ dev.off()
 include_graphics("../figures/concept_figures/fullgradientcovered.pdf")
 ```
 
-## Why can't we use the distance to all data points?
+## Why can't we use the distance to all data points instead of distance to the nearest neighbor?
+
+The distance to all training points is not helpful here because then gaps could not be considered. But gaps are equally problematic (see our first figure in the manuscript) and using the average distance to training points cannot account for that. In the example below the new data point even has a lower average distance to training data although it is clearly in an area not covered by training data. 
 
 ```{r Fig_dist2all,include = FALSE}
 
@@ -469,8 +421,7 @@ legend("topleft",pch=c(1,4),legend=c("training data","new data point"),
 legend("topright",legend=paste0("mean distance between points = ",round(mean(dist(dat)),2)),bty="n")
 
 dist_new <- mean(FNN::knnx.dist(data.frame("x"=5.5,"y"=5.5),dat,k=1))
-text(5.5,5.5,paste0("mean distance to all \ntrainig points = ",round(dist_new,2)),
-     pos=1)
+text(5.5,5.5,paste0("mean distance to all \ntrainig points = ",round(dist_new,2)),pos=1)
 dev.off()
 ```
 
